# TE-Backend

./: .env.example  .gitignore  HISTORY_API_README.md  HISTORY_JWT_TESTING.md  README.md  backfill_main_cause.py  insert_demo.py  main.py  migrate_records.py  patch_cypher.py  pyproject.toml  requirements.txt  run_backend.sh  schema.prisma
scratch/: list_routes.py
src/: __init__.py
src/api/: __init__.py  app.py  models.py  root_cause_routes.py  routes.py  services.py
src/api/root_cause/: __init__.py  constants.py  five_whys.py  ishikawa.py  normalize.py  routes.py  schemas.py
src/api/routers/: compat.py  v1.py
src/api/schemas/: __init__.py  analysis.py  frontend.py  knowledge.py  shared.py
src/api/services/: __init__.py  service.py
src/core/: __init__.py  analysis_helpers.py  orchestrator.py  processor.py  simple_orchestrator.py
src/database/: __init__.py  connection.py  prisma_client.py  query_builder.py  repository.py  repository_search.py  repository_write.py  save_analysis.py  schema.py  search.py  supabase_client.py  supabase_save.py
src/llm/: __init__.py  client.py  extractor.py  json_parser.py  prompts.py  service.py
src/utils/: __init__.py  auth.py  config.py  logging.py
