[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "neo4j>=5.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "uvicorn>=0.34.0",
    "prisma",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "python-slugify>=8.0.4",
]
